# property-maintenance-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  langgraph.json  litellm_config.yaml  main.py  pyproject.toml
.github/workflows/: evals.yml
agent/: main.py  runner.py  settings.py
agent/db/: engine.py  models.py
agent/graph/: checkpointer.py  graph.py  nodes.py  state.py  tools.py
agent/ingest/: gmail_client.py  normalize.py  persist.py  routes.py  schemas.py
datasets/: README.md
datasets/e2e/: dev.jsonl
docs/: framework-choice.md  ingest-design.md
evals/: README.md  baseline.json  failure_taxonomy.md  failure_taxonomy_2.md  fix_vs_eval.md  fix_vs_eval_2.md  labels.csv  labels_2.md  make_notes.py  metrics.py  run_evals.py  runner.py  taxonomy.md
evals/components/: classify_eval.py  extract_eval.py  pre_filter_eval.py
evals/error_analysis/: README.md
evals/graders/: __init__.py  clarify_ask_judge.py  maintenance_boolean.py  pre_filter_decision.py  required_fields.py  risk_flags.py  sentiment_judge.py  urgency.py  urgency_judge.py
evals/review/: README.md  index.html  server.py
evals/validation/: urgency_judge_labels.csv  validate_urgency_judge.py
experiments/: README.md
experiments/dspy_classify/: analyze.py  baseline.py  compiled_classify.json  config.py  dataset.py  metric.py  signature.py
experiments/dspy_extract/: analyze.py  baseline.py  config.py  dataset.py  metric.py  signature.py
mcp_server/: Dockerfile  __init__.py  server.py
scripts/: export_graph_png.py  load_dataset_to_db.py  seed_vendors.py
(+49 files in other folders)
