[project]
name = "property-maintenance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "google-auth-oauthlib>=1.4.0",
    "greenlet>=3.5.0",
    "langfuse>=4.6.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]
