[project]
name = "property-maintenance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "google-auth-oauthlib>=1.4.0",
    "greenlet>=3.5.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.18",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "langgraph-cli[inmem]>=0.4.25",
    "mcp[cli]>=1.20.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]
